...

    <!--Strings for dialogs-->
    <string name="confirm_deletion_title">Confirm Deletion</string>
    <string name="confirm_deletion_text">Do you really want to delete the token &lt;i>%s&lt;/i>?</string>
    <string name="edit_name_title">Edit Name</string>
    <string name="rename">Rename</string>
    <string name="item" translatable="false">Item</string>
    <string name="change_pin">Change PIN</string>
    <string name="tap_to_show_otp">Tap to show </string>
    <string name="tap_to_unlock">Tap to unlock</string>
    <string name="tap_to_set_pin">Tap to set PIN</string>
    <string name="enter_pin_title">Enter PIN</string>
    <string name="set_new_pin">Set new PIN</string>
...

    <!--Strings for toasts-->
    <string name="toast_token_removed">Token removed</string>
    <string name="toast_deletion_cancelled">Deletion cancelled</string>
    <string name="toast_cancelled">Cancelled</string>
    <string name="toast_token_added_for">Token added for:</string>
    <string name="toast_invalid_qr">Invalid QR Code</string>
    <string name="toast_pin_not_correct">The PIN you have entered is not correct!</string>
    <string name="toast_empty_pin_input">Empty Input - Cancelled</string>
    <string name="toast_pin_set_isEmpty">New PIN cannot be empty!</string>
    <string name="toast_name_cantbe_empty">Name cannot be empty!</string>
    <string name="toast_secret_cantbe_empty">Secret cannot be empty!</string>
    <string name="toast_secret_nob32format">Secret is not in Base32 format!</string>
...
    <string name="toast_otp_to_clipboard">OTP copied to Clipboard</string>

    <!--Strings for buttons-->
    <string name="button_text_no">No</string>
    <string name="button_text_yes">Yes</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_save">Save</string>
    <string name="button_text_next">Next</string>
    <string name="button_text_enter">Enter</string>
    <string name="button_text_plus" translatable="false">+</string>

    <!--Strings for about-->
    <string name="version" translatable="false">Version </string>
...
