<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/edit_token"
        android:title="RENAME" />
    <item
        android:id="@+id/delete_token"
        android:title="DELETE" />
</menu>